--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,8 @@
     <string name="login">Вход</string>
     <string name="home">Главная</string>
     <string name="favourite">Избранное</string>
-    <string name="accaunt">Аккаунт</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="account">Аккаунт</string>
+    <string name="filter_text">По дате добавления</string>
+    <string name="more_text">Подробнее</string>
+    <string name="favourite_txt">Избранное</string>
 </resources>
